gcc/testsuite/rust/rustc/ui/parser/unsafe-foreign-mod.rs
unsafe extern {
// { dg-error "" "" { target *-*-* } .-1 }
}

unsafe extern "C" {
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

